--- a/sqlite3_exercises.ipynb
+++ b/sqlite3_exercises.ipynb
@@ -1387,12 +1387,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YpFFETH20h8g",
-        "outputId": "5567c59e-eab7-4e48-8e29-ce91fb4d2776",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "YpFFETH20h8g",
+        "outputId": "5567c59e-eab7-4e48-8e29-ce91fb4d2776"
       },
       "source": [
         "consulta('''SELECT * from olist_order_payments_dataset \n",
@@ -1509,48 +1509,6 @@
             "tags": []
           },
           "execution_count": 22
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kBIAivkQ--hU",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
-        },
-        "outputId": "93be3ca2-abda-4066-f437-c52e3bb91851"
-      },
-      "source": [
-        "consulta('''SELECT * from olist_order_payments_dataset \n",
-        "            ...\n",
-        "            order by payment_value DESC\n",
-        "            limit 5''')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "ERROR:root:An unexpected error occurred while tokenizing input\n",
-            "The following traceback may be corrupted or invalid\n",
-            "The error message is: ('EOF in multi-line string', (1, 19))\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "OperationalError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-bd3515a455d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m             \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m             \u001b[0morder\u001b[0m \u001b[0mby\u001b[0m \u001b[0mpayment_value\u001b[0m \u001b[0mDESC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m             limit 5''')\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-6-d86df19ee199>\u001b[0m in \u001b[0;36mconsulta\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconsulta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mconsult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mOperationalError\u001b[0m: near \".\": syntax error"
-          ]
         }
       ]
     },
@@ -1700,6 +1658,125 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "PKgwkhFa31mY"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mD-3PmbE36Vq",
+        "outputId": "507b8b9b-6e4f-4f7b-c9e9-02c679700b0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "consulta('''SELECT * , Max() from olist_order_payments_dataset \n",
+        "            where payment_type = \"credit_card\"\n",
+        "            order by payment_value DESC \n",
+        "            ''')"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>payment_sequential</th>\n",
+              "      <th>payment_type</th>\n",
+              "      <th>payment_installments</th>\n",
+              "      <th>payment_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>03caa2c082116e1d31e67e9ae3700499</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>1</td>\n",
+              "      <td>13664.08</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0812eb902a67711a1cb742b3cdaa65ae</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>8</td>\n",
+              "      <td>6929.31</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>a96610ab360d42a2e5335a3998b4718a</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>10</td>\n",
+              "      <td>4950.34</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>b4c4b76c642808cbe472a32b86cddc95</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4809.44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>199af31afc78c699f0dbf71fb178d4d4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>8</td>\n",
+              "      <td>4764.34</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                           order_id  ...  payment_value\n",
+              "0  03caa2c082116e1d31e67e9ae3700499  ...       13664.08\n",
+              "1  0812eb902a67711a1cb742b3cdaa65ae  ...        6929.31\n",
+              "2  a96610ab360d42a2e5335a3998b4718a  ...        4950.34\n",
+              "3  b4c4b76c642808cbe472a32b86cddc95  ...        4809.44\n",
+              "4  199af31afc78c699f0dbf71fb178d4d4  ...        4764.34\n",
+              "\n",
+              "[5 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oNGKVArwqcaJ"
       },
       "source": [
@@ -1819,6 +1896,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "_4Wg62W-MYRn"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CFFnMX4WMaCG"
+      },
+      "source": [
+        "select * from olist_order_payments_dataset\n",
+        "consulta('''SELECT * , Max() from olist_order_payments_dataset \n",
+        "            where payment_type = \"credit_card\"\n",
+        "            order by payment_value DESC \n",
+        "            ''')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ZR--1jeoqcaJ"
       },
       "source": [
@@ -1829,14 +1930,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "MhRos-M8qcaJ",
-        "outputId": "9638dea3-c355-4846-a926-a8a58375f28b"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 295
+        },
+        "outputId": "da4f21a0-a4fd-470d-cf5e-bd5ceed2319f"
       },
       "source": [
-        "consulta('''\n",
-        "\n",
+        "consulta('''SELECT *  from olist_order_payments_dataset \n",
+        "            \n",
+        "                        \n",
         "        ''')"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1860,68 +1966,214 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>customer_state</th>\n",
-              "      <th>sum</th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>payment_sequential</th>\n",
+              "      <th>payment_type</th>\n",
+              "      <th>payment_installments</th>\n",
+              "      <th>payment_value</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>SP</td>\n",
-              "      <td>5998226.96</td>\n",
+              "      <td>b81ef226f3fe1789b1e8b2acac839d17</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>8</td>\n",
+              "      <td>99.33</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>RJ</td>\n",
-              "      <td>2144379.69</td>\n",
+              "      <td>a9810da82917af2d9aefd1278f1dcfa0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>1</td>\n",
+              "      <td>24.39</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>MG</td>\n",
-              "      <td>1872257.26</td>\n",
+              "      <td>25e8ea4e93396b6fa0d3dd708e76c1bd</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>1</td>\n",
+              "      <td>65.71</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>24</th>\n",
-              "      <td>AC</td>\n",
-              "      <td>19680.62</td>\n",
+              "      <th>103883</th>\n",
+              "      <td>32609bbb3dd69b3c066a6860554a77bf</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>1</td>\n",
+              "      <td>47.77</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>25</th>\n",
-              "      <td>AP</td>\n",
-              "      <td>16262.80</td>\n",
+              "      <th>103884</th>\n",
+              "      <td>b8b61059626efa996a60be9bb9320e10</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>5</td>\n",
+              "      <td>369.54</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>RR</td>\n",
-              "      <td>10064.62</td>\n",
+              "      <th>103885</th>\n",
+              "      <td>28bbae6599b09d39ca406b747b6632b1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>boleto</td>\n",
+              "      <td>1</td>\n",
+              "      <td>191.58</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>27 rows × 2 columns</p>\n",
+              "<p>103886 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "   customer_state         sum\n",
-              "0              SP  5998226.96\n",
-              "1              RJ  2144379.69\n",
-              "2              MG  1872257.26\n",
-              "..            ...         ...\n",
-              "24             AC    19680.62\n",
-              "25             AP    16262.80\n",
-              "26             RR    10064.62\n",
+              "                                order_id  ...  payment_value\n",
+              "0       b81ef226f3fe1789b1e8b2acac839d17  ...          99.33\n",
+              "1       a9810da82917af2d9aefd1278f1dcfa0  ...          24.39\n",
+              "2       25e8ea4e93396b6fa0d3dd708e76c1bd  ...          65.71\n",
+              "...                                  ...  ...            ...\n",
+              "103883  32609bbb3dd69b3c066a6860554a77bf  ...          47.77\n",
+              "103884  b8b61059626efa996a60be9bb9320e10  ...         369.54\n",
+              "103885  28bbae6599b09d39ca406b747b6632b1  ...         191.58\n",
               "\n",
-              "[27 rows x 2 columns]"
+              "[103886 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3in0djECJqOD"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PI8nYH4hJsUE",
+        "outputId": "98eff914-37a5-46f3-cb66-96f91b933129",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "#consulta('''SELECT customer_state, sum(payment_value) from olist_order_payments_dataset \n",
+        "consulta('''pragma table_info(olist_order_payments_dataset)             \n",
+        "            ''')"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>cid</th>\n",
+              "      <th>name</th>\n",
+              "      <th>type</th>\n",
+              "      <th>notnull</th>\n",
+              "      <th>dflt_value</th>\n",
+              "      <th>pk</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>order_id</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>payment_sequential</td>\n",
+              "      <td>INTEGER</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>payment_type</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>payment_installments</td>\n",
+              "      <td>INTEGER</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>payment_value</td>\n",
+              "      <td>REAL</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   cid                  name     type  notnull dflt_value  pk\n",
+              "0    0              order_id     TEXT        0       None   0\n",
+              "1    1    payment_sequential  INTEGER        0       None   0\n",
+              "2    2          payment_type     TEXT        0       None   0\n",
+              "3    3  payment_installments  INTEGER        0       None   0\n",
+              "4    4         payment_value     REAL        0       None   0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
         }
       ]
     }
